--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
 	width: 100%;
 	height: 90vh;
 	background-image: url("welcome-image.jpg");
+	background-repeat: no-repeat; 
+  	background-position: center;
 	background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
