--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 .intro {
 	width: 100%;
-	height: 90vh;
+	height: 80vh;
 	background-image: url("welcome-image.jpg");
 	background-repeat: no-repeat; 
   	background-position: center;
@@ -16,12 +16,11 @@
 }
 
 .intro-text {
-	padding-top: 8rem;
+	padding-top: 12rem;
 	color: white;
 	margin: 0 auto;
 	width: 55ch;
 	text-align: center;
-
 }
 .work {
 	width: 100%;
@@ -35,11 +34,13 @@
 	width: 50%;
 	display: inline-block;
 	text-align: center;
-	height: 65vh;
+	height: 40vh;
 	background-size: cover;
+	background-position: center;
 	-moz-background-size: cover;
   	-o-background-size: cover;
 }
+
 
 #project-dijkstra {
 	background-image: url("arrow-graph.jpg");
@@ -47,6 +48,12 @@
 
 #project-graphing-cal {
 	background-image: url("black-and-white-chart.jpg");
+}
+
+.project-graphing-cal-link {
+	width: 100%;
+	height: 100%;
+	text-indent: -9999px;
 }
 
 .contact {
@@ -66,6 +73,7 @@ a {
 	background-color: #242424;
 	list-style-type: none;
 	overflow: hidden;
+	opacity: 0.9;
 }
 
 .menu-direction {
@@ -76,6 +84,46 @@ a {
 	
 }
 
-.menu-bar {
-	border-radius: 25px;
+
+.menu-direction a:hover {
+	color: #ccc2ba;
+}
+
+.menu-direction li:last-child {
+	border-right: none;
+}
+
+.contact {
+	display: block;
+	position: center;
+	height: 50vh;
+	background-color: #242424;
+	text-align: center;
+	color: white;
+}
+
+.contact-description {
+	display: block;
+	position: center;
+}
+
+.contact-form {
+	display: block;
+	position: center;
+}
+
+.contact-form-name {
+	display: block;
+}
+
+.contact-form-email {
+	display: block;
+}
+
+.contact-form-messege {
+	display: block;
+}
+
+.contact-form-submit {
+	display: block;
 }
