--- a/styles.css
+++ b/styles.css
@@ -21,24 +21,29 @@
 	margin: 0 auto;
 	width: 55ch;
 	text-align: center;
+	size: 3vh;
 }
 .work {
 	width: 100%;
-	height: 70vh;
+	height: 80vh;
 	background-color: #242424;
 	text-align: center;
 	color: white;
 }
 
 .project {
-	width: 50%;
+	width: 49.8%;
 	display: inline-block;
 	text-align: center;
 	height: 40vh;
 	background-size: cover;
 	background-position: center;
 	-moz-background-size: cover;
-  	-o-background-size: cover;
+	-o-background-size: cover;
+	border-radius: 15px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #444444;  
 }
 
 
@@ -56,24 +61,20 @@
 	text-indent: -9999px;
 }
 
-.contact {
-	display: block;
-	height: 50vh;
-	background-color: #242424;
-	text-align: center;
-	color: white;
-}
-
 a {
 	color: aliceblue;
 	text-decoration: none;
 }
 
-.side-menu {
+.menu-bar {
+	position: sticky;
 	background-color: #242424;
+	opacity: 0.9;
+}
+
+.side-menu {
 	list-style-type: none;
 	overflow: hidden;
-	opacity: 0.9;
 }
 
 .menu-direction {
@@ -126,4 +127,10 @@ a {
 
 .contact-form-submit {
 	display: block;
+}
+
+.profile {
+	width: 100%;
+	height: 70vh;
+	background-color: #505050;
 }
