--- a/styles.css
+++ b/styles.css
@@ -4,28 +4,38 @@
 	box-sizing: boarder-box;
 }
 
+body {
+	height: 100%;
+	font-family: sans-serif;
+}
+
+p {
+	
+}
+
 .intro {
 	width: 100%;
-	height: 80vh;
 	background-image: url("welcome-image.jpg");
 	background-repeat: no-repeat; 
   	background-position: center;
 	background-size: cover;
   	-moz-background-size: cover;
-  	-o-background-size: cover;
+	-o-background-size: cover;
+	display: block;
+	position: center;
+	text-align: center;
 }
 
 .intro-text {
-	padding-top: 12rem;
+	padding: 10rem 0;
+	left: 50%;
 	color: white;
-	margin: 0 auto;
-	width: 55ch;
-	text-align: center;
+	width: 25%;
+	height: 80%;
 	size: 3vh;
 }
 .work {
 	width: 100%;
-	height: 80vh;
 	background-color: #242424;
 	text-align: center;
 	color: white;
@@ -35,12 +45,11 @@
 	width: 49.8%;
 	display: inline-block;
 	text-align: center;
-	height: 40vh;
+	height: 20rem;
 	background-size: cover;
 	background-position: center;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	border-radius: 15px;
 	border-style: solid;
 	border-width: 1px;
 	border-color: #444444;  
@@ -48,10 +57,21 @@
 
 
 #project-dijkstra {
+	padding: 50px 0;
+	text-align: center;
+  	letter-spacing: 4px;
+  	text-transform: uppercase;
+  	color: #D8D8D8;
 	background-image: url("arrow-graph.jpg");
+	text-align: center
 }
 
 #project-graphing-cal {
+	padding: 50px 0;
+	text-align: center;
+  	letter-spacing: 4px;
+  	text-transform: uppercase;
+  	color: #D8D8D8;
 	background-image: url("black-and-white-chart.jpg");
 }
 
@@ -97,40 +117,86 @@ a {
 .contact {
 	display: block;
 	position: center;
+	text-align: center;
 	height: 50vh;
 	background-color: #242424;
-	text-align: center;
 	color: white;
+	padding: 10vh 2rem;
 }
 
 .contact-description {
+	max-width: 35ch;
+	margin: 0 auto 1rem auto;
+	padding: 0.25rem .25rem;
 	display: block;
-	position: center;
+	text-align: center;
 }
 
-.contact-form {
+.contact-form-name, .contact-form-email, .contact-form-messege {
 	display: block;
-	position: center;
-}
-
-.contact-form-name {
-	display: block;
-}
-
-.contact-form-email {
-	display: block;
-}
-
-.contact-form-messege {
-	display: block;
+	width: 80%;
+	font-size: 1rem;
+  	margin: 0 auto 1rem auto;
+	padding: 0.25rem .25rem;
+	max-width: 35ch;
 }
 
 .contact-form-submit {
 	display: block;
+	width: 80%;
+	background: transparent;
+	border: 2px solid #fff;
+	border-radius: 10px;
+	margin: 0 auto 1rem auto;
+	padding: 1rem 1rem;
+	text-align: center;
+	color: aliceblue;
+	font-size: 1rem;
+	max-width: 35ch;
+}
+
+.contact-form-submit:hover {
+	color: dimgray;
+	border: 2px solid dimgray;
 }
 
 .profile {
 	width: 100%;
-	height: 70vh;
 	background-color: #505050;
+	text-align: center;
+	padding: 1.5rem 0rem;
+}
+
+.welcome-text {
+	font-family: "Courier New", Courier, monospace;
+	padding: 1rem;
+	color: white;
+	size: 3vh;
+	width: 80%;
+	height: auto;
+	background-color: #242424;
+	opacity: 0.9;
+}
+
+.profile-text {
+	padding: 1rem 10%;
+	color: white;
+	width: 80%;
+	font-size: 4vh;
+}
+
+.profile-image {
+	border-radius: 50%;
+	border: 1px solid #fff;
+	width: 20%;
+	height: auto;
+}
+
+.info-socialLink {
+	border-bottom: 2px solid #fff;
+}
+
+.info-socialLink:hover {
+	color: wheat;
+	border-bottom: 2px solid #000;
 }
