submit button change

--- a/styles.css
+++ b/styles.css
@@ -156,8 +156,8 @@ a {
 }
 
 .contact-form-submit:hover {
-	color: dimgray;
-	border: 2px solid dimgray;
+	color: wheat;;
+	border: 2px solid wheat;
 }
 
 .profile {
