--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,12 @@ p {
 
 .intro {
 	width: 100%;
-	background-image: url("welcome-image.jpg");
+	background-image: url("coffee-communication-compose-1498964.jpg");
 	background-repeat: no-repeat; 
-  	background-position: center;
 	background-size: cover;
   	-moz-background-size: cover;
 	-o-background-size: cover;
 	display: block;
-	position: center;
 	text-align: center;
 }
 
@@ -36,7 +34,7 @@ p {
 }
 .work {
 	width: 100%;
-	background-color: #242424;
+	background-color: #505050;
 	text-align: center;
 	color: white;
 }
@@ -175,7 +173,7 @@ a {
 	width: 80%;
 	height: auto;
 	background-color: #242424;
-	opacity: 0.9;
+	background: rgba(0, 0, 0, 0.7);
 }
 
 .profile-text {
