--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,10 @@ body {
 	font-family: sans-serif;
 }
 
-p {
-	
-}
-
 .intro {
 	width: 100%;
 	background-image: url("coffee-communication-compose-1498964.jpg");
-	background-repeat: no-repeat; 
+	background-repeat: no-repeat;
 	background-size: cover;
   	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -50,33 +46,7 @@ p {
 	-o-background-size: cover;
 	border-style: solid;
 	border-width: 1px;
-	border-color: #444444;  
-}
-
-
-#project-dijkstra {
-	padding: 50px 0;
-	text-align: center;
-  	letter-spacing: 4px;
-  	text-transform: uppercase;
-  	color: #D8D8D8;
-	background-image: url("arrow-graph.jpg");
-	text-align: center
-}
-
-#project-graphing-cal {
-	padding: 50px 0;
-	text-align: center;
-  	letter-spacing: 4px;
-  	text-transform: uppercase;
-  	color: #D8D8D8;
-	background-image: url("black-and-white-chart.jpg");
-}
-
-.project-graphing-cal-link {
-	width: 100%;
-	height: 100%;
-	text-indent: -9999px;
+	border-color: #444444;
 }
 
 a {
@@ -100,7 +70,7 @@ a {
     padding: 14px 16px;
 	display: inline;
 	float: left;
-	
+
 }
 
 
@@ -197,4 +167,35 @@ a {
 .info-socialLink:hover {
 	color: wheat;
 	border-bottom: 2px solid #000;
+}
+
+.otus-photo {
+	max-width: 100%;
+    max-height: 100%;
+}
+
+.projects {
+	background-color: #505050;
+	color: #fff;
+}
+
+.otus-text {
+	padding: 10%;
+	width: 80%;
+	height: auto;
+}
+
+@media (min-width: 600px) {
+	.projects {
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+	}
+
+	.otus-site-project {
+		grid-column: span 2;
+	}
+
+	.otus-site-text {
+		grid-column: span 2;
+	}
 }
