--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,12 @@ body {
 
 .intro {
 	width: 100%;
+	height: 80vh;
 	background-image: url("beverage-black-coffee-business-2312369.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
-  	-moz-background-size: cover;
+	background-position: center;
+  -moz-background-size: cover;
 	-o-background-size: cover;
 	display: block;
 	text-align: center;
@@ -58,16 +60,17 @@ a {
 	position: sticky;
 	background-color: #242424;
 	opacity: 0.9;
+	transition: top 0.3s;
 }
 
 .side-menu {
 	list-style-type: none;
 	overflow: hidden;
+	text-align: center;
 }
 
 .menu-direction {
-	text-align: center;
-    padding: 14px 16px;
+  padding: 14px 16px;
 	display: inline;
 	float: left;
 
