--- a/styles.css
+++ b/styles.css
@@ -41,14 +41,14 @@ body {
 	width: 49.8%;
 	display: inline-block;
 	text-align: center;
-	height: 20rem;
+	height: 100rem;
 	background-size: cover;
 	background-position: center;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	border-style: solid;
 	border-width: 1px;
-	border-color: #444444;
+	border-color: #fff;
 }
 
 a {
@@ -180,8 +180,32 @@ a {
 }
 
 .projects {
-	background-color: #505050;
-	color: #fff;
+	background-color: #dddcdf;
+	color: #000;
+	height: 70rem;
+	text-align: center;
+}
+
+.cotrack {
+	padding-top: 30%;
+}
+
+.cotrack-intro {
+	font-size: 80px;
+	color: blue;
+}
+
+.cotrack-text {
+	font-size: 20px;
+	text-decoration: underline;
+}
+
+.cotrack-img {
+	height: 40rem;
+}
+
+.google-play-image {
+	width: 20rem;
 }
 
 .otus-site-project {
